[startplasma] Do not call QProcess::close() before QProcess::terminate()

Calling QProcess::close() before QProcess::terminate() will cause the process to be killed before we try to terminate it.

BUG: 97716